// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build_components multiple components 1`] = `
Object {
  "output": Array [
    Object {
      "code": "import _extends from '@babel/runtime/helpers/extends';
import React from 'react';
import View from '@tarojs/components-rn/dist/components/View';
import Text from '@tarojs/components-rn/dist/components/Text';
import { Dimensions, StyleSheet } from 'react-native';

// 一般app 只有竖屏模式，所以可以只获取一次 width
const deviceWidthDp = Dimensions.get('window').width;
const uiWidthPx = 375;

function scalePx2dp (uiElementPx) {
  return uiElementPx * deviceWidthDp / uiWidthPx
}

var indexScssStyleSheet = StyleSheet.create({
  \\"cellGroup\\": {
    \\"backgroundColor\\": \\"white\\",
    \\"borderRadius\\": scalePx2dp(10)
  },
  \\"cellItem\\": {
    \\"display\\": \\"flex\\",
    \\"flexDirection\\": \\"row\\",
    \\"justifyContent\\": \\"space-between\\",
    \\"paddingLeft\\": scalePx2dp(15),
    \\"paddingRight\\": scalePx2dp(15),
    \\"height\\": scalePx2dp(49)
  },
  \\"cellItem--care\\": {
    \\"height\\": scalePx2dp(64)
  },
  \\"cellItem__title\\": {
    \\"color\\": \\"#333\\",
    \\"fontWeight\\": \\"bold\\"
  },
  \\"cellItem__line\\": {
    \\"height\\": scalePx2dp(0.5),
    \\"backgroundColor\\": \\"#f4f4f4\\"
  }
});

function _mergeEleStyles(){return [].concat.apply([],arguments).reduce((pre,cur)=>Object.assign(pre,cur),{});}var _styleSheet=indexScssStyleSheet;function Cell(_ref){var children=_ref.children,style=_ref.style;var childs=Array.isArray(children)?children:[children];return React.createElement(View,{style:_mergeEleStyles(_styleSheet[\\"cellGroup\\"],_extends({},style))},childs.map(function(it,i){return [it].concat(i===children.length-1?[]:React.createElement(View,{key:\\"line-\\"+i,style:_styleSheet[\\"cellItem__line\\"]}));}));}function Item(_ref2){var title=_ref2.title,children=_ref2.children,style=_ref2.style;return React.createElement(View,{style:_mergeEleStyles(_styleSheet[\\"cellItem\\"],_extends({},style))},React.createElement(Text,{style:_styleSheet[\\"cellItem__title\\"]},title),React.createElement(View,{style:_styleSheet[\\"cellItem__content\\"]},children));}Cell.Item=Item;

export { Cell as default };
",
      "dynamicImports": Array [],
      "exports": Array [
        "default",
      ],
      "facadeModuleId": "/Users/biorz/workspace/taro/packages/taro-rn-runner/__tests__/mock/src/components/cell/index.tsx",
      "fileName": "components/cell/index.js",
      "implicitlyLoadedBefore": Array [],
      "importedBindings": Object {
        "@babel/runtime/helpers/extends": Array [
          "default",
        ],
        "@tarojs/components-rn/dist/components/Text": Array [
          "default",
        ],
        "@tarojs/components-rn/dist/components/View": Array [
          "default",
        ],
        "react": Array [
          "default",
        ],
        "react-native": Array [
          "Dimensions",
          "StyleSheet",
        ],
      },
      "imports": Array [
        "@babel/runtime/helpers/extends",
        "react",
        "@tarojs/components-rn/dist/components/View",
        "@tarojs/components-rn/dist/components/Text",
        "react-native",
      ],
      "isDynamicEntry": false,
      "isEntry": true,
      "isImplicitEntry": false,
      "map": null,
      "modules": Object {
        "/Users/biorz/workspace/taro/packages/taro-rn-runner/__tests__/mock/src/components/cell/index.scss": Object {
          "code": "// 一般app 只有竖屏模式，所以可以只获取一次 width
const deviceWidthDp = Dimensions.get('window').width;
const uiWidthPx = 375;

function scalePx2dp (uiElementPx) {
  return uiElementPx * deviceWidthDp / uiWidthPx
}

var indexScssStyleSheet = StyleSheet.create({
  \\"cellGroup\\": {
    \\"backgroundColor\\": \\"white\\",
    \\"borderRadius\\": scalePx2dp(10)
  },
  \\"cellItem\\": {
    \\"display\\": \\"flex\\",
    \\"flexDirection\\": \\"row\\",
    \\"justifyContent\\": \\"space-between\\",
    \\"paddingLeft\\": scalePx2dp(15),
    \\"paddingRight\\": scalePx2dp(15),
    \\"height\\": scalePx2dp(49)
  },
  \\"cellItem--care\\": {
    \\"height\\": scalePx2dp(64)
  },
  \\"cellItem__title\\": {
    \\"color\\": \\"#333\\",
    \\"fontWeight\\": \\"bold\\"
  },
  \\"cellItem__line\\": {
    \\"height\\": scalePx2dp(0.5),
    \\"backgroundColor\\": \\"#f4f4f4\\"
  }
});",
          "originalLength": 418,
          "removedExports": Array [],
          "renderedExports": Array [
            "default",
          ],
          "renderedLength": 767,
        },
        "/Users/biorz/workspace/taro/packages/taro-rn-runner/__tests__/mock/src/components/cell/index.tsx": Object {
          "code": "function _mergeEleStyles(){return [].concat.apply([],arguments).reduce((pre,cur)=>Object.assign(pre,cur),{});}var _styleSheet=indexScssStyleSheet;function Cell(_ref){var children=_ref.children,style=_ref.style;var childs=Array.isArray(children)?children:[children];return React.createElement(View,{style:_mergeEleStyles(_styleSheet[\\"cellGroup\\"],_extends({},style))},childs.map(function(it,i){return [it].concat(i===children.length-1?[]:React.createElement(View,{key:\\"line-\\"+i,style:_styleSheet[\\"cellItem__line\\"]}));}));}function Item(_ref2){var title=_ref2.title,children=_ref2.children,style=_ref2.style;return React.createElement(View,{style:_mergeEleStyles(_styleSheet[\\"cellItem\\"],_extends({},style))},React.createElement(Text,{style:_styleSheet[\\"cellItem__title\\"]},title),React.createElement(View,{style:_styleSheet[\\"cellItem__content\\"]},children));}Cell.Item=Item;",
          "originalLength": 891,
          "removedExports": Array [],
          "renderedExports": Array [
            "default",
          ],
          "renderedLength": 869,
        },
      },
      "name": "components/cell/index",
      "referencedFiles": Array [],
      "type": "chunk",
    },
    Object {
      "code": "import React from 'react';
import { navigateBack } from '@tarojs/taro-rn/dist/api';
import View from '@tarojs/components-rn/dist/components/View';
import Text from '@tarojs/components-rn/dist/components/Text';
import Image from '@tarojs/components-rn/dist/components/Image';
import { Dimensions, StyleSheet } from 'react-native';

var iconBack = require('../../assets/icon_back-541a82be.webp');

// 一般app 只有竖屏模式，所以可以只获取一次 width
const deviceWidthDp = Dimensions.get('window').width;
const uiWidthPx = 375;

function scalePx2dp (uiElementPx) {
  return uiElementPx * deviceWidthDp / uiWidthPx
}

var indexScssStyleSheet = StyleSheet.create({
  \\"navbar\\": {
    \\"display\\": \\"flex\\",
    \\"flexDirection\\": \\"row\\",
    \\"justifyContent\\": \\"space-between\\",
    \\"alignItems\\": \\"center\\",
    \\"width\\": scalePx2dp(375),
    \\"height\\": scalePx2dp(50),
    \\"backgroundColor\\": \\"white\\"
  },
  \\"navbar-title-text\\": {
    \\"fontSize\\": scalePx2dp(19),
    \\"color\\": \\"#000\\"
  },
  \\"icon-back\\": {
    \\"width\\": scalePx2dp(19),
    \\"height\\": scalePx2dp(19)
  },
  \\"navbar-leftElement\\": {
    \\"width\\": scalePx2dp(50),
    \\"display\\": \\"flex\\",
    \\"flexDirection\\": \\"row\\",
    \\"justifyContent\\": \\"center\\",
    \\"alignItems\\": \\"center\\"
  },
  \\"navbar-rightElement\\": {
    \\"width\\": scalePx2dp(50),
    \\"display\\": \\"flex\\",
    \\"flexDirection\\": \\"row\\",
    \\"justifyContent\\": \\"center\\",
    \\"alignItems\\": \\"center\\"
  }
});

console.log('rn resolve');

var _styleSheet=indexScssStyleSheet;console.log('process.env.TARO_ENV',\\"rn\\");function Navbar(props){var title=props.title,rightElement=props.rightElement;return React.createElement(View,{style:_styleSheet[\\"navbar\\"]},React.createElement(View,{style:_styleSheet[\\"navbar-leftElement\\"]},React.createElement(Image,{src:iconBack,onClick:function back(){return navigateBack();},style:_styleSheet[\\"icon-back\\"]})),React.createElement(View,{style:_styleSheet[\\"navbar-title\\"]},typeof title==='string'?React.createElement(Text,{style:_styleSheet[\\"navbar-title-text\\"]},title):title),React.createElement(View,{style:_styleSheet[\\"navbar-rightElement\\"]},rightElement));}

export { Navbar as default };
",
      "dynamicImports": Array [],
      "exports": Array [
        "default",
      ],
      "facadeModuleId": "/Users/biorz/workspace/taro/packages/taro-rn-runner/__tests__/mock/src/components/navbar/index.tsx",
      "fileName": "components/navbar/index.js",
      "implicitlyLoadedBefore": Array [],
      "importedBindings": Object {
        "@tarojs/components-rn/dist/components/Image": Array [
          "default",
        ],
        "@tarojs/components-rn/dist/components/Text": Array [
          "default",
        ],
        "@tarojs/components-rn/dist/components/View": Array [
          "default",
        ],
        "@tarojs/taro-rn/dist/api": Array [
          "navigateBack",
        ],
        "react": Array [
          "default",
        ],
        "react-native": Array [
          "Dimensions",
          "StyleSheet",
        ],
      },
      "imports": Array [
        "react",
        "@tarojs/taro-rn/dist/api",
        "@tarojs/components-rn/dist/components/View",
        "@tarojs/components-rn/dist/components/Text",
        "@tarojs/components-rn/dist/components/Image",
        "react-native",
      ],
      "isDynamicEntry": false,
      "isEntry": true,
      "isImplicitEntry": false,
      "map": null,
      "modules": Object {
        "/Users/biorz/workspace/taro/packages/taro-rn-runner/__tests__/mock/src/components/navbar/icon_back.webp": Object {
          "code": "var iconBack = require('../../assets/icon_back-541a82be.webp');",
          "originalLength": 52,
          "removedExports": Array [],
          "renderedExports": Array [
            "default",
          ],
          "renderedLength": 52,
        },
        "/Users/biorz/workspace/taro/packages/taro-rn-runner/__tests__/mock/src/components/navbar/index.scss": Object {
          "code": "// 一般app 只有竖屏模式，所以可以只获取一次 width
const deviceWidthDp = Dimensions.get('window').width;
const uiWidthPx = 375;

function scalePx2dp (uiElementPx) {
  return uiElementPx * deviceWidthDp / uiWidthPx
}

var indexScssStyleSheet = StyleSheet.create({
  \\"navbar\\": {
    \\"display\\": \\"flex\\",
    \\"flexDirection\\": \\"row\\",
    \\"justifyContent\\": \\"space-between\\",
    \\"alignItems\\": \\"center\\",
    \\"width\\": scalePx2dp(375),
    \\"height\\": scalePx2dp(50),
    \\"backgroundColor\\": \\"white\\"
  },
  \\"navbar-title-text\\": {
    \\"fontSize\\": scalePx2dp(19),
    \\"color\\": \\"#000\\"
  },
  \\"icon-back\\": {
    \\"width\\": scalePx2dp(19),
    \\"height\\": scalePx2dp(19)
  },
  \\"navbar-leftElement\\": {
    \\"width\\": scalePx2dp(50),
    \\"display\\": \\"flex\\",
    \\"flexDirection\\": \\"row\\",
    \\"justifyContent\\": \\"center\\",
    \\"alignItems\\": \\"center\\"
  },
  \\"navbar-rightElement\\": {
    \\"width\\": scalePx2dp(50),
    \\"display\\": \\"flex\\",
    \\"flexDirection\\": \\"row\\",
    \\"justifyContent\\": \\"center\\",
    \\"alignItems\\": \\"center\\"
  }
});",
          "originalLength": 470,
          "removedExports": Array [],
          "renderedExports": Array [
            "default",
          ],
          "renderedLength": 977,
        },
        "/Users/biorz/workspace/taro/packages/taro-rn-runner/__tests__/mock/src/components/navbar/index.tsx": Object {
          "code": "var _styleSheet=indexScssStyleSheet;console.log('process.env.TARO_ENV',\\"rn\\");function Navbar(props){var title=props.title,rightElement=props.rightElement;return React.createElement(View,{style:_styleSheet[\\"navbar\\"]},React.createElement(View,{style:_styleSheet[\\"navbar-leftElement\\"]},React.createElement(Image,{src:iconBack,onClick:function back(){return navigateBack();},style:_styleSheet[\\"icon-back\\"]})),React.createElement(View,{style:_styleSheet[\\"navbar-title\\"]},typeof title==='string'?React.createElement(Text,{style:_styleSheet[\\"navbar-title-text\\"]},title):title),React.createElement(View,{style:_styleSheet[\\"navbar-rightElement\\"]},rightElement));}",
          "originalLength": 992,
          "removedExports": Array [],
          "renderedExports": Array [
            "default",
          ],
          "renderedLength": 654,
        },
        "/Users/biorz/workspace/taro/packages/taro-rn-runner/__tests__/mock/src/components/navbar/resolver.rn.ts": Object {
          "code": "console.log('rn resolve');",
          "originalLength": 26,
          "removedExports": Array [],
          "renderedExports": Array [],
          "renderedLength": 26,
        },
      },
      "name": "components/navbar/index",
      "referencedFiles": Array [
        "assets/icon_back-541a82be.webp",
      ],
      "type": "chunk",
    },
    Object {
      "fileName": "assets/icon_back-541a82be.webp",
      "isAsset": true,
      "name": "icon_back.webp",
      "source": Object {
        "data": Array [
          82,
          73,
          70,
          70,
          172,
          0,
          0,
          0,
          87,
          69,
          66,
          80,
          86,
          80,
          56,
          76,
          159,
          0,
          0,
          0,
          47,
          48,
          192,
          11,
          16,
          103,
          96,
          42,
          146,
          141,
          125,
          51,
          126,
          53,
          144,
          79,
          255,
          4,
          212,
          48,
          21,
          201,
          198,
          190,
          25,
          191,
          26,
          200,
          167,
          127,
          2,
          76,
          69,
          178,
          177,
          111,
          198,
          175,
          6,
          242,
          233,
          159,
          0,
          53,
          145,
          36,
          41,
          231,
          223,
          220,
          73,
          184,
          136,
          158,
          34,
          230,
          15,
          192,
          238,
          126,
          4,
          248,
          36,
          130,
          145,
          36,
          255,
          63,
          194,
          238,
          46,
          85,
          21,
          119,
          55,
          205,
          204,
          2,
          155,
          218,
          218,
          155,
          252,
          19,
          189,
          247,
          21,
          63,
          93,
          66,
          36,
          224,
          32,
          18,
          192,
          66,
          148,
          80,
          141,
          101,
          234,
          9,
          99,
          68,
          255,
          133,
          4,
          137,
          6,
          190,
          128,
          194,
          159,
          236,
          13,
          14,
          179,
          21,
          98,
          54,
          207,
          29,
          86,
          243,
          252,
          96,
          54,
          119,
          153,
          221,
          126,
          181,
          59,
          245,
          97,
          11,
          186,
          60,
          95,
          35,
          182,
          48,
          229,
          251,
          249,
          32,
          96,
          134,
          0,
          43,
          125,
          192,
          26,
          38,
          192,
          124,
          8,
          18,
          7,
          0,
        ],
        "type": "Buffer",
      },
      "type": "asset",
    },
  ],
}
`;

exports[`build_components single component 1`] = `
Object {
  "output": Array [
    Object {
      "code": "import _extends from '@babel/runtime/helpers/extends';
import React from 'react';
import View from '@tarojs/components-rn/dist/components/View';
import Text from '@tarojs/components-rn/dist/components/Text';
import { Dimensions, StyleSheet } from 'react-native';

// 一般app 只有竖屏模式，所以可以只获取一次 width
const deviceWidthDp = Dimensions.get('window').width;
const uiWidthPx = 375;

function scalePx2dp (uiElementPx) {
  return uiElementPx * deviceWidthDp / uiWidthPx
}

var indexScssStyleSheet = StyleSheet.create({
  \\"cellGroup\\": {
    \\"backgroundColor\\": \\"white\\",
    \\"borderRadius\\": scalePx2dp(10)
  },
  \\"cellItem\\": {
    \\"display\\": \\"flex\\",
    \\"flexDirection\\": \\"row\\",
    \\"justifyContent\\": \\"space-between\\",
    \\"paddingLeft\\": scalePx2dp(15),
    \\"paddingRight\\": scalePx2dp(15),
    \\"height\\": scalePx2dp(49)
  },
  \\"cellItem--care\\": {
    \\"height\\": scalePx2dp(64)
  },
  \\"cellItem__title\\": {
    \\"color\\": \\"#333\\",
    \\"fontWeight\\": \\"bold\\"
  },
  \\"cellItem__line\\": {
    \\"height\\": scalePx2dp(0.5),
    \\"backgroundColor\\": \\"#f4f4f4\\"
  }
});

function _mergeEleStyles(){return [].concat.apply([],arguments).reduce((pre,cur)=>Object.assign(pre,cur),{});}var _styleSheet=indexScssStyleSheet;function Cell(_ref){var children=_ref.children,style=_ref.style;var childs=Array.isArray(children)?children:[children];return React.createElement(View,{style:_mergeEleStyles(_styleSheet[\\"cellGroup\\"],_extends({},style))},childs.map(function(it,i){return [it].concat(i===children.length-1?[]:React.createElement(View,{key:\\"line-\\"+i,style:_styleSheet[\\"cellItem__line\\"]}));}));}function Item(_ref2){var title=_ref2.title,children=_ref2.children,style=_ref2.style;return React.createElement(View,{style:_mergeEleStyles(_styleSheet[\\"cellItem\\"],_extends({},style))},React.createElement(Text,{style:_styleSheet[\\"cellItem__title\\"]},title),React.createElement(View,{style:_styleSheet[\\"cellItem__content\\"]},children));}Cell.Item=Item;

export { Cell as default };
",
      "dynamicImports": Array [],
      "exports": Array [
        "default",
      ],
      "facadeModuleId": "/Users/biorz/workspace/taro/packages/taro-rn-runner/__tests__/mock/src/components/cell/index.tsx",
      "fileName": "index.js",
      "implicitlyLoadedBefore": Array [],
      "importedBindings": Object {
        "@babel/runtime/helpers/extends": Array [
          "default",
        ],
        "@tarojs/components-rn/dist/components/Text": Array [
          "default",
        ],
        "@tarojs/components-rn/dist/components/View": Array [
          "default",
        ],
        "react": Array [
          "default",
        ],
        "react-native": Array [
          "Dimensions",
          "StyleSheet",
        ],
      },
      "imports": Array [
        "@babel/runtime/helpers/extends",
        "react",
        "@tarojs/components-rn/dist/components/View",
        "@tarojs/components-rn/dist/components/Text",
        "react-native",
      ],
      "isDynamicEntry": false,
      "isEntry": true,
      "isImplicitEntry": false,
      "map": null,
      "modules": Object {
        "/Users/biorz/workspace/taro/packages/taro-rn-runner/__tests__/mock/src/components/cell/index.scss": Object {
          "code": "// 一般app 只有竖屏模式，所以可以只获取一次 width
const deviceWidthDp = Dimensions.get('window').width;
const uiWidthPx = 375;

function scalePx2dp (uiElementPx) {
  return uiElementPx * deviceWidthDp / uiWidthPx
}

var indexScssStyleSheet = StyleSheet.create({
  \\"cellGroup\\": {
    \\"backgroundColor\\": \\"white\\",
    \\"borderRadius\\": scalePx2dp(10)
  },
  \\"cellItem\\": {
    \\"display\\": \\"flex\\",
    \\"flexDirection\\": \\"row\\",
    \\"justifyContent\\": \\"space-between\\",
    \\"paddingLeft\\": scalePx2dp(15),
    \\"paddingRight\\": scalePx2dp(15),
    \\"height\\": scalePx2dp(49)
  },
  \\"cellItem--care\\": {
    \\"height\\": scalePx2dp(64)
  },
  \\"cellItem__title\\": {
    \\"color\\": \\"#333\\",
    \\"fontWeight\\": \\"bold\\"
  },
  \\"cellItem__line\\": {
    \\"height\\": scalePx2dp(0.5),
    \\"backgroundColor\\": \\"#f4f4f4\\"
  }
});",
          "originalLength": 418,
          "removedExports": Array [],
          "renderedExports": Array [
            "default",
          ],
          "renderedLength": 767,
        },
        "/Users/biorz/workspace/taro/packages/taro-rn-runner/__tests__/mock/src/components/cell/index.tsx": Object {
          "code": "function _mergeEleStyles(){return [].concat.apply([],arguments).reduce((pre,cur)=>Object.assign(pre,cur),{});}var _styleSheet=indexScssStyleSheet;function Cell(_ref){var children=_ref.children,style=_ref.style;var childs=Array.isArray(children)?children:[children];return React.createElement(View,{style:_mergeEleStyles(_styleSheet[\\"cellGroup\\"],_extends({},style))},childs.map(function(it,i){return [it].concat(i===children.length-1?[]:React.createElement(View,{key:\\"line-\\"+i,style:_styleSheet[\\"cellItem__line\\"]}));}));}function Item(_ref2){var title=_ref2.title,children=_ref2.children,style=_ref2.style;return React.createElement(View,{style:_mergeEleStyles(_styleSheet[\\"cellItem\\"],_extends({},style))},React.createElement(Text,{style:_styleSheet[\\"cellItem__title\\"]},title),React.createElement(View,{style:_styleSheet[\\"cellItem__content\\"]},children));}Cell.Item=Item;",
          "originalLength": 891,
          "removedExports": Array [],
          "renderedExports": Array [
            "default",
          ],
          "renderedLength": 869,
        },
      },
      "name": "index",
      "referencedFiles": Array [],
      "type": "chunk",
    },
  ],
}
`;

exports[`build_components svg transform 1`] = `
Object {
  "output": Array [
    Object {
      "code": "import React from 'react';

var Logo = require('./assets/rollup-logo-a4496a61.svg');

function index(){return React.createElement(Logo,{className:\\"logo\\",width:120,height:40});}

export { index as default };
",
      "dynamicImports": Array [],
      "exports": Array [
        "default",
      ],
      "facadeModuleId": "/Users/biorz/workspace/taro/packages/taro-rn-runner/__tests__/mock/src/components/svg/index.tsx",
      "fileName": "index.js",
      "implicitlyLoadedBefore": Array [],
      "importedBindings": Object {
        "react": Array [
          "default",
        ],
      },
      "imports": Array [
        "react",
      ],
      "isDynamicEntry": false,
      "isEntry": true,
      "isImplicitEntry": false,
      "map": null,
      "modules": Object {
        "/Users/biorz/workspace/taro/packages/taro-rn-runner/__tests__/mock/src/components/svg/index.tsx": Object {
          "code": "function index(){return React.createElement(Logo,{className:\\"logo\\",width:120,height:40});}",
          "originalLength": 155,
          "removedExports": Array [],
          "renderedExports": Array [
            "default",
          ],
          "renderedLength": 90,
        },
        "/Users/biorz/workspace/taro/packages/taro-rn-runner/__tests__/mock/src/components/svg/rollup-logo.svg": Object {
          "code": "var Logo = require('./assets/rollup-logo-a4496a61.svg');",
          "originalLength": 52,
          "removedExports": Array [],
          "renderedExports": Array [
            "default",
          ],
          "renderedLength": 48,
        },
      },
      "name": "index",
      "referencedFiles": Array [
        "assets/rollup-logo-a4496a61.svg",
      ],
      "type": "chunk",
    },
    Object {
      "fileName": "assets/rollup-logo-a4496a61.svg",
      "isAsset": true,
      "name": "rollup-logo.svg",
      "source": Object {
        "data": Array [
          60,
          115,
          118,
          103,
          32,
          120,
          109,
          108,
          110,
          115,
          61,
          34,
          104,
          116,
          116,
          112,
          58,
          47,
          47,
          119,
          119,
          119,
          46,
          119,
          51,
          46,
          111,
          114,
          103,
          47,
          50,
          48,
          48,
          48,
          47,
          115,
          118,
          103,
          34,
          32,
          118,
          105,
          101,
          119,
          66,
          111,
          120,
          61,
          34,
          49,
          48,
          48,
          32,
          49,
          48,
          48,
          32,
          56,
          48,
          48,
          32,
          56,
          48,
          48,
          34,
          62,
          10,
          9,
          60,
          115,
          116,
          121,
          108,
          101,
          62,
          46,
          115,
          116,
          48,
          123,
          102,
          105,
          108,
          108,
          58,
          117,
          114,
          108,
          40,
          35,
          88,
          77,
          76,
          73,
          68,
          95,
          52,
          95,
          41,
          59,
          125,
          32,
          46,
          115,
          116,
          49,
          123,
          102,
          105,
          108,
          108,
          58,
          117,
          114,
          108,
          40,
          35,
          88,
          77,
          76,
          73,
          68,
          95,
          53,
          95,
          41,
          59,
          125,
          32,
          46,
          115,
          116,
          50,
          123,
          102,
          105,
          108,
          108,
          58,
          117,
          114,
          108,
          40,
          35,
          88,
          77,
          76,
          73,
          68,
          95,
          56,
          95,
          41,
          59,
          125,
          32,
          46,
          115,
          116,
          51,
          123,
          102,
          105,
          108,
          108,
          58,
          117,
          114,
          108,
          40,
          35,
          88,
          77,
          76,
          73,
          68,
          95,
          57,
          95,
          41,
          59,
          125,
          32,
          46,
          115,
          116,
          52,
          123,
          102,
          105,
          108,
          108,
          58,
          117,
          114,
          108,
          40,
          35,
          88,
          77,
          76,
          73,
          68,
          95,
          49,
          49,
          95,
          41,
          59,
          125,
          32,
          46,
          115,
          116,
          53,
          123,
          111,
          112,
          97,
          99,
          105,
          116,
          121,
          58,
          48,
          46,
          51,
          59,
          102,
          105,
          108,
          108,
          58,
          117,
          114,
          108,
          40,
          35,
          88,
          77,
          76,
          73,
          68,
          95,
          49,
          54,
          95,
          41,
          59,
          125,
          60,
          47,
          115,
          116,
          121,
          108,
          101,
          62,
          60,
          103,
          32,
          105,
          100,
          61,
          34,
          88,
          77,
          76,
          73,
          68,
          95,
          49,
          52,
          95,
          34,
          62,
          60,
          108,
          105,
          110,
          101,
          97,
          114,
          71,
          114,
          97,
          100,
          105,
          101,
          110,
          116,
          32,
          105,
          100,
          61,
          34,
          88,
          77,
          76,
          73,
          68,
          95,
          52,
          95,
          34,
          32,
          103,
          114,
          97,
          100,
          105,
          101,
          110,
          116,
          85,
          110,
          105,
          116,
          115,
          61,
          34,
          117,
          115,
          101,
          114,
          83,
          112,
          97,
          99,
          101,
          79,
          110,
          85,
          115,
          101,
          34,
          32,
          120,
          49,
          61,
          34,
          52,
          52,
          52,
          46,
          52,
          54,
          57,
          34,
          32,
          121,
          49,
          61,
          34,
          53,
          50,
          54,
          46,
          48,
          53,
          49,
          34,
          32,
          120,
          50,
          61,
          34,
          53,
          57,
          56,
          46,
          52,
          54,
          57,
          34,
          32,
          121,
          50,
          61,
          34,
          53,
          54,
          50,
          46,
          48,
          53,
          49,
          34,
          62,
          60,
          115,
          116,
          111,
          112,
          32,
          111,
          102,
          102,
          115,
          101,
          116,
          61,
          34,
          48,
          34,
          32,
          115,
          116,
          111,
          112,
          45,
          99,
          111,
          108,
          111,
          114,
          61,
          34,
          35,
          70,
          70,
          54,
          53,
          51,
          51,
          34,
          47,
          62,
          60,
          115,
          116,
          111,
          112,
          32,
          111,
          102,
          102,
          115,
          101,
          116,
          61,
          34,
          46,
          49,
          53,
          55,
          34,
          32,
          115,
          116,
          111,
          112,
          45,
          99,
          111,
          108,
          111,
          114,
          61,
          34,
          35,
          70,
          70,
          53,
          54,
          51,
          51,
          34,
          47,
          62,
          60,
          115,
          116,
          111,
          112,
          32,
          111,
          102,
          102,
          115,
          101,
          116,
          61,
          34,
          46,
          52,
          51,
          52,
          34,
          32,
          115,
          116,
          111,
          112,
          45,
          99,
          111,
          108,
          111,
          114,
          61,
          34,
          35,
          70,
          70,
          52,
          51,
          51,
          51,
          34,
          47,
          62,
          60,
          115,
          116,
          111,
          112,
          32,
          111,
          102,
          102,
          115,
          101,
          116,
          61,
          34,
          46,
          55,
          49,
          52,
          34,
          32,
          115,
          116,
          111,
          112,
          45,
          99,
          111,
          108,
          111,
          114,
          61,
          34,
          35,
          70,
          70,
          51,
          55,
          51,
          51,
          34,
          47,
          62,
          60,
          115,
          116,
          111,
          112,
          32,
          111,
          102,
          102,
          115,
          101,
          116,
          61,
          34,
          49,
          34,
          32,
          115,
          116,
          111,
          112,
          45,
          99,
          111,
          108,
          111,
          114,
          61,
          34,
          35,
          70,
          51,
          51,
          34,
          47,
          62,
          60,
          47,
          108,
          105,
          110,
          101,
          97,
          114,
          71,
          114,
          97,
          100,
          105,
          101,
          110,
          116,
          62,
          60,
          112,
          97,
          116,
          104,
          32,
          105,
          100,
          61,
          34,
          88,
          77,
          76,
          73,
          68,
          95,
          49,
          53,
          95,
          34,
          32,
          99,
          108,
          97,
          115,
          115,
          61,
          34,
          115,
          116,
          48,
          34,
          32,
          100,
          61,
          34,
          77,
          55,
          50,
          49,
          32,
          52,
          49,
          48,
          99,
          48,
          45,
          51,
          51,
          46,
          54,
          45,
          56,
          46,
          56,
          45,
          54,
          53,
          46,
          49,
          45,
          50,
          52,
          46,
          51,
          45,
          57,
          50,
          46,
          52,
          45,
          52,
          49,
          46,
          49,
          45,
          52,
          50,
          46,
          51,
          45,
          49,
          51,
          48,
          46,
          53,
          45,
          53,
          50,
          46,
          49,
          45,
          49,
          53,
          50,
          46,
          55,
          45,
          46,
          50,
          45,
          50,
          50,
          46,
          56,
          32,
          53,
          51,
          46,
          50,
          32,
          51,
          56,
          46,
          51,
          32,
          49,
          49,
          50,
          46,
          52,
          32,
          54,
          53,
          32,
          49,
          48,
          55,
          46,
          55,
          32,
          51,
          52,
          45,
          54,
          45,
          54,
          45,
          56,
          52,
          45,
          54,
          45,
          56,
          52,
          32,
          53,
          50,
          32,
          57,
          56,
          32,
          52,
          48,
          32,
          54,
          56,
          45,
          53,
          52,
          32,
          49,
          53,
          56,
          83,
          51,
          53,
          57,
          32,
          55,
          55,
          57,
          32,
          51,
          52,
          53,
          32,
          55,
          56,
          55,
          99,
          45,
          46,
          54,
          46,
          52,
          45,
          49,
          46,
          50,
          46,
          55,
          45,
          49,
          46,
          57,
          32,
          49,
          104,
          51,
          54,
          56,
          46,
          55,
          99,
          54,
          46,
          53,
          32,
          48,
          32,
          49,
          48,
          46,
          55,
          45,
          54,
          46,
          57,
          32,
          55,
          46,
          56,
          45,
          49,
          50,
          46,
          55,
          108,
          45,
          57,
          54,
          46,
          52,
          45,
          49,
          57,
          48,
          46,
          56,
          99,
          45,
          50,
          46,
          49,
          45,
          52,
          46,
          49,
          45,
          46,
          54,
          45,
          57,
          46,
          50,
          32,
          51,
          46,
          52,
          45,
          49,
          49,
          46,
          53,
          67,
          54,
          56,
          51,
          32,
          53,
          52,
          48,
          46,
          54,
          32,
          55,
          50,
          49,
          32,
          52,
          55,
          57,
          46,
          56,
          32,
          55,
          50,
          49,
          32,
          52,
          49,
          48,
          122,
          34,
          47,
          62,
          60,
          47,
          103,
          62,
          60,
          103,
          32,
          105,
          100,
          61,
          34,
          88,
          77,
          76,
          73,
          68,
          95,
          50,
          95,
          34,
          62,
          60,
          108,
          105,
          110,
          101,
          97,
          114,
          71,
          114,
          97,
          100,
          105,
          101,
          110,
          116,
          32,
          105,
          100,
          61,
          34,
          88,
          77,
          76,
          73,
          68,
          95,
          53,
          95,
          34,
          32,
          103,
          114,
          97,
          100,
          105,
          101,
          110,
          116,
          85,
          110,
          105,
          116,
          115,
          61,
          34,
          117,
          115,
          101,
          114,
          83,
          112,
          97,
          99,
          101,
          79,
          110,
          85,
          115,
          101,
          34,
          32,
          120,
          49,
          61,
          34,
          52,
          50,
          48,
          46,
          51,
          56,
          50,
          34,
          32,
          121,
          49,
          61,
          34,
          52,
          55,
          53,
          46,
          48,
          48,
          50,
          34,
          32,
          120,
          50,
          61,
          34,
          54,
          57,
          54,
          46,
          51,
          56,
          51,
          34,
          32,
          121,
          50,
          61,
          34,
          54,
          56,
          57,
          46,
          48,
          48,
          50,
          34,
          62,
          60,
          115,
          116,
          111,
          112,
          32,
          111,
          102,
          102,
          115,
          101,
          116,
          61,
          34,
          48,
          34,
          32,
          115,
          116,
          111,
          112,
          45,
          99,
          111,
          108,
          111,
          114,
          61,
          34,
          35,
          66,
          70,
          51,
          51,
          51,
          56,
          34,
          47,
          62,
          60,
          115,
          116,
          111,
          112,
          32,
          111,
          102,
          102,
          115,
          101,
          116,
          61,
          34,
          49,
          34,
          32,
          115,
          116,
          111,
          112,
          45,
          99,
          111,
          108,
          111,
          114,
          61,
          34,
          35,
          70,
          51,
          51,
          34,
          47,
          62,
          60,
          47,
          108,
          105,
          110,
          101,
          97,
          114,
          71,
          114,
          97,
          100,
          105,
          101,
          110,
          116,
          62,
          60,
          112,
          97,
          116,
          104,
          32,
          105,
          100,
          61,
          34,
          88,
          77,
          76,
          73,
          68,
          95,
          49,
          48,
          95,
          34,
          32,
          99,
          108,
          97,
          115,
          115,
          61,
          34,
          115,
          116,
          49,
          34,
          32,
          100,
          61,
          34,
          77,
          55,
          50,
          49,
          32,
          52,
          49,
          48,
          99,
          48,
          45,
          51,
          51,
          46,
          54,
          45,
          56,
          46,
          56,
          45,
          54,
          53,
          46,
          49,
          45,
          50,
          52,
          46,
          51,
          45,
          57,
          50,
          46,
          52,
          45,
          52,
          49,
          46,
          49,
          45,
          52,
          50,
          46,
          51,
          45,
          49,
          51,
          48,
          46,
          53,
          45,
          53,
          50,
          46,
          49,
          45,
          49,
          53,
          50,
          46,
          55,
          45,
          46,
          50,
          45,
          50,
          50,
          46,
          56,
          32,
          53,
          51,
          46,
          50,
          32,
          51,
          56,
          46,
          51,
          32,
          49,
          49,
          50,
          46,
          52,
          32,
          54,
          53,
          32,
          49,
          48,
          55,
          46,
          55,
          32,
          51,
          52,
          45,
          54,
          45,
          54,
          45,
          56,
          52,
          45,
          54,
          45,
          56,
          52,
          32,
          53,
          50,
          32,
          57,
          56,
          32,
          52,
          48,
          32,
          54,
          56,
          45,
          53,
          52,
          32,
          49,
          53,
          56,
          83,
          51,
          53,
          57,
          32,
          55,
          55,
          57,
          32,
          51,
          52,
          53,
          32,
          55,
          56,
          55,
          99,
          45,
          46,
          54,
          46,
          52,
          45,
          49,
          46,
          50,
          46,
          55,
          45,
          49,
          46,
          57,
          32,
          49,
          104,
          51,
          54,
          56,
          46,
          55,
          99,
          54,
          46,
          53,
          32,
          48,
          32,
          49,
          48,
          46,
          55,
          45,
          54,
          46,
          57,
          32,
          55,
          46,
          56,
          45,
          49,
          50,
          46,
          55,
          108,
          45,
          57,
          54,
          46,
          52,
          45,
          49,
          57,
          48,
          46,
          56,
          99,
          45,
          50,
          46,
          49,
          45,
          52,
          46,
          49,
          45,
          46,
          54,
          45,
          57,
          46,
          50,
          32,
          51,
          46,
          52,
          45,
          49,
          49,
          46,
          53,
          67,
          54,
          56,
          51,
          32,
          53,
          52,
          48,
          46,
          54,
          32,
          55,
          50,
          49,
          32,
          52,
          55,
          57,
          46,
          56,
          32,
          55,
          50,
          49,
          32,
          52,
          49,
          48,
          122,
          34,
          47,
          62,
          60,
          47,
          103,
          62,
          60,
          108,
          105,
          110,
          101,
          97,
          114,
          71,
          114,
          97,
          100,
          105,
          101,
          110,
          116,
          32,
          105,
          100,
          61,
          34,
          88,
          77,
          76,
          73,
          68,
          95,
          56,
          95,
          34,
          32,
          103,
          114,
          97,
          100,
          105,
          101,
          110,
          116,
          85,
          110,
          105,
          116,
          115,
          61,
          34,
          117,
          115,
          101,
          114,
          83,
          112,
          97,
          99,
          101,
          79,
          110,
          85,
          115,
          101,
          34,
          32,
          120,
          49,
          61,
          34,
          52,
          50,
          57,
          46,
          51,
          56,
          54,
          34,
          32,
          121,
          49,
          61,
          34,
          53,
          49,
          55,
          46,
          49,
          53,
          54,
          34,
          32,
          120,
          50,
          61,
          34,
          52,
          54,
          57,
          46,
          51,
          56,
          54,
          34,
          32,
          121,
          50,
          61,
          34,
          53,
          53,
          57,
          46,
          49,
          53,
          54,
          34,
          62,
          60,
          115,
          116,
          111,
          112,
          32,
          111,
          102,
          102,
          115,
          101,
          116,
          61,
          34,
          48,
          34,
          32,
          115,
          116,
          111,
          112,
          45,
          99,
          111,
          108,
          111,
          114,
          61,
          34,
          35,
          70,
          70,
          54,
          53,
          51,
          51,
          34,
          47,
          62,
          60,
          115,
          116,
          111,
          112,
          32,
          111,
          102,
          102,
          115,
          101,
          116,
          61,
          34,
          46,
          49,
          53,
          55,
          34,
          32,
          115,
          116,
          111,
          112,
          45,
          99,
          111,
          108,
          111,
          114,
          61,
          34,
          35,
          70,
          70,
          53,
          54,
          51,
          51,
          34,
          47,
          62,
          60,
          115,
          116,
          111,
          112,
          32,
          111,
          102,
          102,
          115,
          101,
          116,
          61,
          34,
          46,
          52,
          51,
          52,
          34,
          32,
          115,
          116,
          111,
          112,
          45,
          99,
          111,
          108,
          111,
          114,
          61,
          34,
          35,
          70,
          70,
          52,
          51,
          51,
          51,
          34,
          47,
          62,
          60,
          115,
          116,
          111,
          112,
          32,
          111,
          102,
          102,
          115,
          101,
          116,
          61,
          34,
          46,
          55,
          49,
          52,
          34,
          32,
          115,
          116,
          111,
          112,
          45,
          99,
          111,
          108,
          111,
          114,
          61,
          34,
          35,
          70,
          70,
          51,
          55,
          51,
          51,
          34,
          47,
          62,
          60,
          115,
          116,
          111,
          112,
          32,
          111,
          102,
          102,
          115,
          101,
          116,
          61,
          34,
          49,
          34,
          32,
          115,
          116,
          111,
          112,
          45,
          99,
          111,
          108,
          111,
          114,
          61,
          34,
          35,
          70,
          51,
          51,
          34,
          47,
          62,
          60,
          47,
          108,
          105,
          110,
          101,
          97,
          114,
          71,
          114,
          97,
          100,
          105,
          101,
          110,
          116,
          62,
          60,
          112,
          97,
          116,
          104,
          32,
          105,
          100,
          61,
          34,
          88,
          77,
          76,
          73,
          68,
          95,
          51,
          95,
          34,
          32,
          99,
          108,
          97,
          115,
          115,
          61,
          34,
          115,
          116,
          50,
          34,
          32,
          100,
          61,
          34,
          77,
          51,
          52,
          53,
          32,
          55,
          56,
          55,
          99,
          49,
          52,
          45,
          56,
          32,
          49,
          49,
          48,
          45,
          49,
          57,
          56,
          32,
          50,
          48,
          52,
          45,
          50,
          56,
          56,
          115,
          49,
          48,
          54,
          45,
          54,
          48,
          32,
          53,
          52,
          45,
          49,
          53,
          56,
          99,
          48,
          32,
          48,
          45,
          49,
          57,
          57,
          32,
          50,
          55,
          57,
          45,
          50,
          55,
          49,
          32,
          52,
          49,
          55,
          34,
          47,
          62,
          60,
          103,
          32,
          105,
          100,
          61,
          34,
          88,
          77,
          76,
          73,
          68,
          95,
          55,
          95,
          34,
          62,
          60,
          108,
          105,
          110,
          101,
          97,
          114,
          71,
          114,
          97,
          100,
          105,
          101,
          110,
          116,
          32,
          105,
          100,
          61,
          34,
          88,
          77,
          76,
          73,
          68,
          95,
          57,
          95,
          34,
          32,
          103,
          114,
          97,
          100,
          105,
          101,
          110,
          116,
          85,
          110,
          105,
          116,
          115,
          61,
          34,
          117,
          115,
          101,
          114,
          83,
          112,
          97,
          99,
          101,
          79,
          110,
          85,
          115,
          101,
          34,
          32,
          120,
          49,
          61,
          34,
          53,
          48,
          50,
          46,
          49,
          49,
          49,
          34,
          32,
          121,
          49,
          61,
          34,
          53,
          56,
          57,
          46,
          52,
          53,
          55,
          34,
          32,
          120,
          50,
          61,
          34,
          52,
          57,
          48,
          46,
          49,
          49,
          49,
          34,
          32,
          121,
          50,
          61,
          34,
          52,
          49,
          55,
          46,
          52,
          53,
          55,
          34,
          62,
          60,
          115,
          116,
          111,
          112,
          32,
          111,
          102,
          102,
          115,
          101,
          116,
          61,
          34,
          48,
          34,
          32,
          115,
          116,
          111,
          112,
          45,
          99,
          111,
          108,
          111,
          114,
          61,
          34,
          35,
          70,
          70,
          54,
          53,
          51,
          51,
          34,
          47,
          62,
          60,
          115,
          116,
          111,
          112,
          32,
          111,
          102,
          102,
          115,
          101,
          116,
          61,
          34,
          46,
          49,
          53,
          55,
          34,
          32,
          115,
          116,
          111,
          112,
          45,
          99,
          111,
          108,
          111,
          114,
          61,
          34,
          35,
          70,
          70,
          53,
          54,
          51,
          51,
          34,
          47,
          62,
          60,
          115,
          116,
          111,
          112,
          32,
          111,
          102,
          102,
          115,
          101,
          116,
          61,
          34,
          46,
          52,
          51,
          52,
          34,
          32,
          115,
          116,
          111,
          112,
          45,
          99,
          111,
          108,
          111,
          114,
          61,
          34,
          35,
          70,
          70,
          52,
          51,
          51,
          51,
          34,
          47,
          62,
          60,
          115,
          116,
          111,
          112,
          32,
          111,
          102,
          102,
          115,
          101,
          116,
          61,
          34,
          46,
          55,
          49,
          52,
          34,
          32,
          115,
          116,
          111,
          112,
          45,
          99,
          111,
          108,
          111,
          114,
          61,
          34,
          35,
          70,
          70,
          51,
          55,
          51,
          51,
          34,
          47,
          62,
          60,
          115,
          116,
          111,
          112,
          32,
          111,
          102,
          102,
          115,
          101,
          116,
          61,
          34,
          49,
          34,
          32,
          115,
          116,
          111,
          112,
          45,
          99,
          111,
          108,
          111,
          114,
          61,
          34,
          35,
          70,
          51,
          51,
          34,
          47,
          62,
          60,
          47,
          108,
          105,
          110,
          101,
          97,
          114,
          71,
          114,
          97,
          100,
          105,
          101,
          110,
          116,
          62,
          60,
          112,
          97,
          116,
          104,
          32,
          105,
          100,
          61,
          34,
          88,
          77,
          76,
          73,
          68,
          95,
          49,
          50,
          95,
          34,
          32,
          99,
          108,
          97,
          115,
          115,
          61,
          34,
          115,
          116,
          51,
          34,
          32,
          100,
          61,
          34,
          77,
          51,
          55,
          51,
          32,
          53,
          51,
          55,
          99,
          49,
          51,
          52,
          46,
          52,
          45,
          50,
          52,
          55,
          46,
          49,
          32,
          49,
          53,
          50,
          45,
          50,
          55,
          50,
          32,
          50,
          50,
          50,
          45,
          50,
          55,
          50,
          32,
          51,
          54,
          46,
          56,
          32,
          48,
          32,
          55,
          51,
          46,
          57,
          32,
          49,
          54,
          46,
          54,
          32,
          57,
          55,
          46,
          57,
          32,
          52,
          54,
          46,
          49,
          45,
          51,
          50,
          46,
          55,
          45,
          53,
          50,
          46,
          55,
          45,
          57,
          48,
          46,
          54,
          45,
          56,
          56,
          45,
          49,
          53,
          54,
          46,
          57,
          45,
          56,
          57,
          72,
          51,
          48,
          55,
          46,
          55,
          99,
          45,
          52,
          46,
          56,
          32,
          48,
          45,
          56,
          46,
          55,
          32,
          51,
          46,
          57,
          45,
          56,
          46,
          55,
          32,
          56,
          46,
          55,
          86,
          54,
          57,
          49,
          99,
          49,
          51,
          46,
          54,
          45,
          51,
          53,
          46,
          49,
          32,
          51,
          54,
          46,
          55,
          45,
          56,
          53,
          46,
          51,
          32,
          55,
          52,
          45,
          49,
          53,
          52,
          122,
          34,
          47,
          62,
          60,
          47,
          103,
          62,
          60,
          108,
          105,
          110,
          101,
          97,
          114,
          71,
          114,
          97,
          100,
          105,
          101,
          110,
          116,
          32,
          105,
          100,
          61,
          34,
          88,
          77,
          76,
          73,
          68,
          95,
          49,
          49,
          95,
          34,
          32,
          103,
          114,
          97,
          100,
          105,
          101,
          110,
          116,
          85,
          110,
          105,
          116,
          115,
          61,
          34,
          117,
          115,
          101,
          114,
          83,
          112,
          97,
          99,
          101,
          79,
          110,
          85,
          115,
          101,
          34,
          32,
          120,
          49,
          61,
          34,
          52,
          53,
          48,
          46,
          49,
          50,
          53,
          34,
          32,
          121,
          49,
          61,
          34,
          53,
          49,
          52,
          46,
          50,
          48,
          57,
          34,
          32,
          120,
          50,
          61,
          34,
          53,
          48,
          54,
          46,
          57,
          52,
          51,
          34,
          32,
          121,
          50,
          61,
          34,
          53,
          53,
          50,
          46,
          56,
          52,
          54,
          34,
          62,
          60,
          115,
          116,
          111,
          112,
          32,
          111,
          102,
          102,
          115,
          101,
          116,
          61,
          34,
          48,
          34,
          32,
          115,
          116,
          111,
          112,
          45,
          99,
          111,
          108,
          111,
          114,
          61,
          34,
          35,
          70,
          66,
          66,
          48,
          52,
          48,
          34,
          47,
          62,
          60,
          115,
          116,
          111,
          112,
          32,
          111,
          102,
          102,
          115,
          101,
          116,
          61,
          34,
          49,
          34,
          32,
          115,
          116,
          111,
          112,
          45,
          99,
          111,
          108,
          111,
          114,
          61,
          34,
          35,
          70,
          66,
          56,
          56,
          52,
          48,
          34,
          47,
          62,
          60,
          47,
          108,
          105,
          110,
          101,
          97,
          114,
          71,
          114,
          97,
          100,
          105,
          101,
          110,
          116,
          62,
          60,
          112,
          97,
          116,
          104,
          32,
          105,
          100,
          61,
          34,
          88,
          77,
          76,
          73,
          68,
          95,
          54,
          95,
          34,
          32,
          99,
          108,
          97,
          115,
          115,
          61,
          34,
          115,
          116,
          52,
          34,
          32,
          100,
          61,
          34,
          77,
          53,
          52,
          57,
          32,
          52,
          57,
          57,
          99,
          45,
          57,
          52,
          32,
          57,
          48,
          45,
          49,
          57,
          48,
          32,
          50,
          56,
          48,
          45,
          50,
          48,
          52,
          32,
          50,
          56,
          56,
          115,
          45,
          51,
          55,
          46,
          53,
          32,
          57,
          45,
          53,
          48,
          45,
          53,
          99,
          45,
          49,
          51,
          46,
          51,
          45,
          49,
          52,
          46,
          57,
          45,
          51,
          52,
          45,
          51,
          57,
          32,
          55,
          56,
          45,
          50,
          52,
          53,
          32,
          49,
          51,
          52,
          46,
          52,
          45,
          50,
          52,
          55,
          46,
          49,
          32,
          49,
          53,
          50,
          45,
          50,
          55,
          50,
          32,
          50,
          50,
          50,
          45,
          50,
          55,
          50,
          32,
          51,
          54,
          46,
          56,
          32,
          48,
          32,
          55,
          51,
          46,
          57,
          32,
          49,
          54,
          46,
          54,
          32,
          57,
          55,
          46,
          57,
          32,
          52,
          54,
          46,
          49,
          32,
          49,
          46,
          51,
          32,
          50,
          46,
          49,
          32,
          50,
          46,
          54,
          32,
          52,
          46,
          51,
          32,
          51,
          46,
          57,
          32,
          54,
          46,
          53,
          45,
          52,
          49,
          46,
          49,
          45,
          52,
          50,
          46,
          51,
          45,
          49,
          51,
          48,
          46,
          53,
          45,
          53,
          50,
          46,
          49,
          45,
          49,
          53,
          50,
          46,
          55,
          45,
          46,
          50,
          45,
          50,
          50,
          46,
          56,
          32,
          53,
          51,
          46,
          50,
          32,
          51,
          56,
          46,
          51,
          32,
          49,
          49,
          50,
          46,
          52,
          32,
          54,
          53,
          32,
          49,
          48,
          55,
          46,
          55,
          32,
          51,
          52,
          45,
          54,
          45,
          54,
          45,
          56,
          52,
          45,
          54,
          45,
          56,
          52,
          67,
          54,
          53,
          53,
          32,
          52,
          51,
          57,
          32,
          54,
          52,
          51,
          32,
          52,
          48,
          57,
          32,
          53,
          52,
          57,
          32,
          52,
          57,
          57,
          122,
          34,
          47,
          62,
          60,
          108,
          105,
          110,
          101,
          97,
          114,
          71,
          114,
          97,
          100,
          105,
          101,
          110,
          116,
          32,
          105,
          100,
          61,
          34,
          88,
          77,
          76,
          73,
          68,
          95,
          49,
          54,
          95,
          34,
          32,
          103,
          114,
          97,
          100,
          105,
          101,
          110,
          116,
          85,
          110,
          105,
          116,
          115,
          61,
          34,
          117,
          115,
          101,
          114,
          83,
          112,
          97,
          99,
          101,
          79,
          110,
          85,
          115,
          101,
          34,
          32,
          120,
          49,
          61,
          34,
          53,
          48,
          56,
          46,
          51,
          51,
          51,
          34,
          32,
          121,
          49,
          61,
          34,
          50,
          57,
          53,
          46,
          55,
          53,
          56,
          34,
          32,
          120,
          50,
          61,
          34,
          52,
          53,
          48,
          46,
          51,
          51,
          51,
          34,
          32,
          121,
          50,
          61,
          34,
          57,
          51,
          51,
          46,
          55,
          53,
          56,
          34,
          62,
          60,
          115,
          116,
          111,
          112,
          32,
          111,
          102,
          102,
          115,
          101,
          116,
          61,
          34,
          48,
          34,
          32,
          115,
          116,
          111,
          112,
          45,
          99,
          111,
          108,
          111,
          114,
          61,
          34,
          35,
          70,
          70,
          70,
          34,
          47,
          62,
          60,
          115,
          116,
          111,
          112,
          32,
          111,
          102,
          102,
          115,
          101,
          116,
          61,
          34,
          49,
          34,
          32,
          115,
          116,
          111,
          112,
          45,
          99,
          111,
          108,
          111,
          114,
          61,
          34,
          35,
          70,
          70,
          70,
          34,
          32,
          115,
          116,
          111,
          112,
          45,
          111,
          112,
          97,
          99,
          105,
          116,
          121,
          61,
          34,
          48,
          34,
          47,
          62,
          60,
          47,
          108,
          105,
          110,
          101,
          97,
          114,
          71,
          114,
          97,
          100,
          105,
          101,
          110,
          116,
          62,
          60,
          112,
          97,
          116,
          104,
          32,
          105,
          100,
          61,
          34,
          88,
          77,
          76,
          73,
          68,
          95,
          49,
          51,
          95,
          34,
          32,
          99,
          108,
          97,
          115,
          115,
          61,
          34,
          115,
          116,
          53,
          34,
          32,
          100,
          61,
          34,
          77,
          51,
          56,
          52,
          32,
          53,
          52,
          56,
          99,
          49,
          51,
          52,
          46,
          52,
          45,
          50,
          52,
          55,
          46,
          49,
          32,
          49,
          53,
          50,
          45,
          50,
          55,
          50,
          32,
          50,
          50,
          50,
          45,
          50,
          55,
          50,
          32,
          51,
          48,
          46,
          51,
          32,
          48,
          32,
          54,
          48,
          46,
          56,
          32,
          49,
          49,
          46,
          51,
          32,
          56,
          52,
          32,
          51,
          49,
          46,
          55,
          45,
          50,
          52,
          45,
          50,
          55,
          46,
          52,
          45,
          53,
          57,
          46,
          54,
          45,
          52,
          50,
          46,
          55,
          45,
          57,
          53,
          45,
          52,
          50,
          46,
          55,
          45,
          55,
          48,
          32,
          48,
          45,
          56,
          55,
          46,
          54,
          32,
          50,
          52,
          46,
          57,
          45,
          50,
          50,
          50,
          32,
          50,
          55,
          50,
          45,
          49,
          49,
          50,
          32,
          50,
          48,
          54,
          45,
          57,
          49,
          46,
          51,
          32,
          50,
          51,
          48,
          46,
          49,
          45,
          55,
          56,
          32,
          50,
          52,
          53,
          32,
          49,
          46,
          57,
          32,
          50,
          46,
          49,
          32,
          52,
          46,
          49,
          32,
          51,
          46,
          57,
          32,
          54,
          46,
          52,
          32,
          53,
          46,
          52,
          45,
          49,
          49,
          46,
          55,
          45,
          49,
          55,
          45,
          49,
          54,
          46,
          57,
          45,
          53,
          54,
          46,
          53,
          32,
          56,
          50,
          46,
          54,
          45,
          50,
          51,
          57,
          46,
          52,
          122,
          34,
          47,
          62,
          10,
          60,
          47,
          115,
          118,
          103,
          62,
          10,
        ],
        "type": "Buffer",
      },
      "type": "asset",
    },
  ],
}
`;
